fixed overflowing of screen and contact from in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,19 @@
 
 }
 
+@media(max-width:600px)
+{
+    .contact-form input
+    {
+margin-bottom: 10px;
+    }
+    .contact-form
+    {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+}
 
 /* nav dropdown */
 
@@ -504,4 +517,11 @@ width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 100%;
+  }
+  .sister-company-logo img
+  {
+      max-width: 100%;
+      width: 70%;
+
   }
